# flare-proto

./: Cargo.toml  IM_PROTO_DESIGN.md  README.md  build.rs
docs/: webrtc-sfu-signaling-over-flare-proto.md
docs/superpowers/specs/: 2026-06-05-flare-proto-general-im-contract-design.md
proto/: ack.proto  conversation.proto  data.proto  enums.proto  errors.proto  event.proto  event_bus_envelope.proto  message.proto  message_content.proto  metadata.proto  models.proto  notification.proto  sync.proto  topic_envelope.proto  whitepaper_schema.proto
proto/common/: EXTENSION_GUIDE.md
src/: lib.rs  message_content_ext.rs  metadata_builder.rs
tests/: ack_contract.rs  general_im_contract.rs  proto_schema_contract.rs
